--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"lint": "eslint --ext .ts,.tsx ./src",
+		"lint": "eslint ./src",
 		"preview": "vite preview",
 		"fix": "npm run format && npm run lint:fix",
 		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
