--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "vit-university-site",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
+	"name": "vit-university-site",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint ./src",
 		"preview": "vite preview",
 		"fix": "npm run format && npm run lint:fix",
 		"format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
 		"lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "swiper": "^11.1.14"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.47",
-    "prettier": "3.3.3",
-    "tailwindcss": "^3.4.13",
-    "vite": "^5.4.1"
-  }
+	},
+	"dependencies": {
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-icons": "^5.3.0",
+		"swiper": "^11.1.14"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.9.0",
+		"@types/react": "^18.3.3",
+		"@types/react-dom": "^18.3.0",
+		"@vitejs/plugin-react": "^4.3.1",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.9.0",
+		"eslint-plugin-react": "^7.35.0",
+		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
+		"eslint-plugin-react-refresh": "^0.4.9",
+		"globals": "^15.9.0",
+		"postcss": "^8.4.47",
+		"prettier": "3.3.3",
+		"tailwindcss": "^3.4.13",
+		"vite": "^5.4.1"
+	}
 }
