--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.3.0",
+		"react-scroll-parallax": "^3.4.5",
 		"swiper": "^11.1.14"
 	},
 	"devDependencies": {
