--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx}'"
 	},
 	"dependencies": {
+		"gsap": "^3.12.5",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-icons": "^5.3.0",
